[package]
name = "mesa-parse"
version = "0.1.0"
edition = "2021"
authors = ["Matt Keeter <matt@oxide.computer>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "2.33.0"
vsc7448-types = { path = "../vsc7448-types" }
parse_int = "0.6"
