[package]
name = "vsc7448-info"
version = "0.1.0"
edition = "2021"
authors = ["Matt Keeter <matt@oxide.computer>"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "1"
thiserror = "1"
vsc7448-types = { path = "../vsc7448-types" }
